--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
                                           <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
                                                 <h2 class="tm-contact-info">林楠,中科大多智能体实验室<a href="http://www.robotics-kejia.com/">Kejia-robotics</a></h2>
-                                                 <h2 class="tm-contact-info">研究方向:软体机器人,设计和运动控制</h2>
+                                                 <h2 class="tm-contact-info">研究方向:软体机器人,设计和运动控制 Design and Motion Control of Soft Robotics</h2>
                                                 <h2 class="tm-contact-info">TEL:+86 18297966030</h2>
                                                 <h2 class="tm-contact-info">ADDRESS: 安徽省合肥市蜀山区中国科学技术大学西校区科技实验楼219</h2>
                                                 <h2 class="tm-contact-info">EMAIL: fhln@mail.ustc.edu.cn</h2>
